# week3-ml-baseline-system

./: .gitignore  README.md  pyproject.toml
models/registry/: latest.txt
models/runs/2025-12-30T16-57-00Z__clf__session42/: config.json
models/runs/2025-12-30T16-57-00Z__clf__session42/env/: env_meta.json
models/runs/2025-12-30T16-57-00Z__clf__session42/metrics/: baseline_holdout.json
models/runs/2025-12-30T16-57-00Z__clf__session42/tables/: holdout_preview.csv
models/runs/2025-12-31T12-41-12Z__clf__session42/env/: pip_freeze.txt
models/runs/2025-12-31T12-41-12Z__clf__session42/metrics/: holdout_metrics.json
models/runs/2025-12-31T12-41-12Z__clf__session42/model/: model.joblib
models/runs/2025-12-31T12-41-12Z__clf__session42/schema/: input_schema.json
models/runs/2025-12-31T12-41-12Z__clf__session42/tables/: holdout_input.csv  holdout_predictions.csv
notebooks/: Shipping_Crisis_Template.ipynb  car_price.ipynb  cars_price.ipynb  heart_dis.ipynb
reports/: eval_summary.md  model_card.md
src/ml_baseline/: cli.py  config.py  io.py  sample_data.py  train.py
src/week3_ml_baseline_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
