[project]
name = "week3-ml-baseline-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "joblib==1.3.2",
    "plotly",
    "pycaret",
    "ipykernel",
    "kagglehub",
    "kaggle",
    "certifi",
    "seaborn"
]

[project.scripts]
ml-baseline = "ml_baseline.cli:app"

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = true
